<resources>
    <string name="app_name">AurumBanking</string>
    <string name="passwort">Passwort</string>
    <string name="email">Email:</string>
    <string name="login">Login</string>
    <string name="beguenstigter">Begünstigter:</string>
    <string name="iban_number">IBAN:</string>
    <string name="bank_name">Bank:</string>
    <string name="amountMoney">Betrag:</string>
    <string name="bic">BIC:</string>
    <string name="date_of_transfer">Datum der Überweisung:</string>
    <string name="transfer_usage">Verwendungszweck:</string>
    <string name="transfer_btn">Überweisung durchführen</string>
    <string name="law_name">gesetzlicher Name:</string>
    <string name="kind_of_request">Art der Anfrage:</string>
    <string name="select_kind_of_request">Select kind of request:</string>

    <string name="customer_contact_email">Email für Kontaktaufnahme:</string>
    <string name="customer_support_message">Nachricht:</string>
    <string name="send_request_btn">Anfrage absenden</string>
    <string name="customer_address">Adresse:</string>
    <string name="tel_number">Telefonnummer:</string>
    <string name="switch_pw_change">Möchten Sie Ihren Passwort ändern?</string>
    <string name="old_pw">Altes Passwort:</string>
    <string name="new_pw">Neues Passwort:</string>
    <string name="new_pw_check">Neue Passwort wiederholen:</string>
    <string name="change_pw_bnt">Passwort ändern</string>
    <string name="cirle_expenses_income">cirleExpensesIncome</string>
    <string name="latest_transaction">Latest Transaction</string>
    <string-array name="kind_of_request">
        <item></item>
        <item>Änderung von persönlichen Daten</item>
        <item>App Fehler</item>
        <item>Terminanfrage</item>
        <item>Depotfragen</item>
        <item>Überweiungsfragen</item>
        <item>Andere</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transaction">Transaktion:</string>
    <string name="transaktionsdetails">Transaktionsdetails:</string>
    <string name="purpose_of_use">Verwendungszweck:</string>
    <string name="latest_transaction_detailview">Latest Transaction</string>
    <string name="logout">logout</string>
    <string name="back_to_depot">Zurück zum Depot</string>


</resources>
