<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/cicle"
        android:layout_width="185dp"
        android:layout_height="106dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/leftside_rounded_corner_style"
        android:padding="25dp"
        android:scaleType="fitCenter"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lastTransaction"
        android:layout_width="185dp"
        android:layout_height="106dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/rightside_rounded_corner_style"
        android:gravity="center"
        android:text="@string/latest_transaction_detailview"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cicle"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/transaction"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bankName"
        android:layout_width="232dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/BankNameConst"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:text="@string/bank_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/bankName"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/iban"
        android:layout_width="232dp"
        android:layout_height="67dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bankName" />

    <TextView
        android:id="@+id/IbanConst"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:text="@string/iban_number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/iban"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BankNameConst" />

    <TextView
        android:id="@+id/bic"
        android:layout_width="232dp"
        android:layout_height="67dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iban" />

    <TextView
        android:id="@+id/BicConst"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:text="@string/bic"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/bic"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IbanConst" />

    <TextView
        android:id="@+id/purposeOfUseConst"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:text="@string/purpose_of_use"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/purposeOfUse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BicConst" />

    <TextView
        android:id="@+id/purposeOfUse"
        android:layout_width="232dp"
        android:layout_height="67dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bic" />

    <TextView
        android:id="@+id/DateConst"
        android:layout_width="146dp"
        android:layout_height="67dp"
        android:layout_marginEnd="1dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:text="@string/date_of_transfer"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Date"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purposeOfUseConst"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="232dp"
        android:layout_height="67dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:background="#2F2C2B"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purposeOfUse"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/transaktionsdetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cicle" />

    <Button
        android:id="@+id/backToDepotButton"
        android:layout_width="160dp"
        android:layout_height="57dp"
        android:background="@drawable/round_blue_btn"
        android:text="@string/back_to_depot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date"
        app:layout_constraintVertical_bias="0.556" />

</androidx.constraintlayout.widget.ConstraintLayout>