<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/userNameLeft"
            android:layout_width="142dp"
            android:layout_height="67dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/leftside_rounded_corner_style"
            android:gravity="center"
            android:text="@string/law_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/userNameRight"
            android:layout_width="234dp"
            android:layout_height="67dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/rightside_rounded_corner_style"
            android:gravity="center"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/userNameLeft"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/request"
            android:layout_width="142dp"
            android:layout_height="67dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/leftside_rounded_corner_style"
            android:gravity="center"
            android:text="@string/kind_of_request"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userNameLeft" />

        <Spinner
            android:id="@+id/spinnerSelectRequest"
            android:layout_width="234dp"
            android:layout_height="67dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/rightside_rounded_corner_style"
            android:text="@string/select_kind_of_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/request"
            app:layout_constraintTop_toBottomOf="@+id/userNameRight" />


        <TextView
            android:id="@+id/userEmailLeft"
            android:layout_width="142dp"
            android:layout_height="67dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/leftside_rounded_corner_style"
            android:gravity="center"
            android:text="@string/customer_contact_email"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/request" />


        <EditText
            android:id="@+id/userEmailRight"
            android:layout_width="234dp"
            android:layout_height="67dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/rightside_rounded_corner_style"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/customerSupportMessageInfo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/userEmailLeft"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSelectRequest"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/customerSupportMessageInfo"
            android:layout_width="378dp"
            android:layout_height="67dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:background="@drawable/top_rounded_corner_style"
            android:gravity="left|center"
            android:paddingStart="20dp"
            android:text="@string/customer_support_message"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmailLeft"
            tools:ignore="RtlHardcoded" />


        <EditText
            android:id="@+id/customerSupportMessage"
            android:layout_width="378dp"
            android:layout_height="134dp"
            android:background="@drawable/button_rounded_corner_style"
            android:gravity="center"
            android:layout_weight="1"
            android:inputType="text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.457"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerSupportMessageInfo" />

        <Button
            android:id="@+id/button"
            android:layout_width="197dp"
            android:layout_height="68dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_blue_btn"
            android:text="@string/send_request_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customerSupportMessage"
            app:layout_constraintVertical_bias="0.412" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>